packages/wick-core/src/antlr4/WickParser.ts
// Generated from /home/fb/projects/wick/packages/wick-core/grammar/WickParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { WickParserListener } from "./WickParserListener";

export class WickParser extends Parser {
	public static readonly StringLiteral = 1;
	public static readonly IntegerLiteral = 2;
	public static readonly DoubleLiteral = 3;
	public static readonly BooleanLiteral = 4;
	public static readonly SchemaPrefix = 5;
	public static readonly SchemaTypeToken = 6;
	public static readonly SchemaTypeLiteral = 7;
	public static readonly GenericLiteral = 8;
	public static readonly DOUBLE_QUOTE = 9;
	public static readonly SINGLE_QUOTE = 10;
	public static readonly LBRACE = 11;
	public static readonly RBRACE = 12;
	public static readonly VARIABLE_PREFIX = 13;
	public static readonly SEMICOLON = 14;
	public static readonly NL = 15;
	public static readonly WHITESPACE = 16;
	public static readonly COMMENT = 17;
	public static readonly LINE_COMMENT = 18;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_schema = 1;
	public static readonly RULE_schemaBlock = 2;
	public static readonly RULE_schemaStatement = 3;
	public static readonly RULE_schemaField = 4;
	public static readonly RULE_schemaScopedBlock = 5;
	public static readonly RULE_schemaType = 6;
	public static readonly RULE_statement = 7;
	public static readonly RULE_id = 8;
	public static readonly RULE_quotelessArgument = 9;
	public static readonly RULE_str = 10;
	public static readonly RULE_number_int = 11;
	public static readonly RULE_number_double = 12;
	public static readonly RULE_bool = 13;
	public static readonly RULE_variable = 14;
	public static readonly RULE_argument = 15;
	public static readonly RULE_field = 16;
	public static readonly RULE_scopedBlock = 17;
	public static readonly RULE_block = 18;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "schema", "schemaBlock", "schemaStatement", "schemaField", 
		"schemaScopedBlock", "schemaType", "statement", "id", "quotelessArgument", 
		"str", "number_int", "number_double", "bool", "variable", "argument", 
		"field", "scopedBlock", "block",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "'@schema'", "':'", 
		undefined, undefined, "'\"'", "'''", "'{'", "'}'", "'$'", "';'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "StringLiteral", "IntegerLiteral", "DoubleLiteral", "BooleanLiteral", 
		"SchemaPrefix", "SchemaTypeToken", "SchemaTypeLiteral", "GenericLiteral", 
		"DOUBLE_QUOTE", "SINGLE_QUOTE", "LBRACE", "RBRACE", "VARIABLE_PREFIX", 
		"SEMICOLON", "NL", "WHITESPACE", "COMMENT", "LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(WickParser._LITERAL_NAMES, WickParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return WickParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "WickParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return WickParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return WickParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(WickParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, WickParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 39;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === WickParser.SchemaPrefix) {
				{
				this.state = 38;
				this.schema();
				}
			}

			this.state = 44;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.GenericLiteral) {
				{
				{
				this.state = 41;
				this.statement();
				}
				}
				this.state = 46;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 47;
			this.match(WickParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schema(): SchemaContext {
		let _localctx: SchemaContext = new SchemaContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, WickParser.RULE_schema);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.match(WickParser.SchemaPrefix);
			this.state = 50;
			this.schemaBlock();
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.NL) {
				{
				{
				this.state = 51;
				this.match(WickParser.NL);
				}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schemaBlock(): SchemaBlockContext {
		let _localctx: SchemaBlockContext = new SchemaBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, WickParser.RULE_schemaBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 57;
			this.match(WickParser.LBRACE);
			this.state = 61;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.NL) {
				{
				{
				this.state = 58;
				this.match(WickParser.NL);
				}
				}
				this.state = 63;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.GenericLiteral) {
				{
				{
				this.state = 64;
				this.schemaStatement();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 70;
			this.match(WickParser.RBRACE);
			this.state = 74;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 71;
					this.match(WickParser.NL);
					}
					}
				}
				this.state = 76;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schemaStatement(): SchemaStatementContext {
		let _localctx: SchemaStatementContext = new SchemaStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, WickParser.RULE_schemaStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 79;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 77;
				this.schemaField();
				}
				break;

			case 2:
				{
				this.state = 78;
				this.schemaScopedBlock();
				}
				break;
			}
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.SEMICOLON || _la === WickParser.NL) {
				{
				{
				this.state = 81;
				_la = this._input.LA(1);
				if (!(_la === WickParser.SEMICOLON || _la === WickParser.NL)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schemaField(): SchemaFieldContext {
		let _localctx: SchemaFieldContext = new SchemaFieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, WickParser.RULE_schemaField);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this.id();
			this.state = 88;
			this.match(WickParser.SchemaTypeToken);
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.SchemaTypeLiteral) {
				{
				{
				this.state = 89;
				this.schemaType();
				}
				}
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schemaScopedBlock(): SchemaScopedBlockContext {
		let _localctx: SchemaScopedBlockContext = new SchemaScopedBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, WickParser.RULE_schemaScopedBlock);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this.id();
			this.state = 99;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 96;
					this.match(WickParser.SchemaTypeLiteral);
					}
					}
				}
				this.state = 101;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			}
			this.state = 102;
			this.schemaBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schemaType(): SchemaTypeContext {
		let _localctx: SchemaTypeContext = new SchemaTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, WickParser.RULE_schemaType);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 104;
			this.match(WickParser.SchemaTypeLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, WickParser.RULE_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 108;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 106;
				this.field();
				}
				break;

			case 2:
				{
				this.state = 107;
				this.scopedBlock();
				}
				break;
			}
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 110;
				_la = this._input.LA(1);
				if (!(_la === WickParser.SEMICOLON || _la === WickParser.NL)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === WickParser.SEMICOLON || _la === WickParser.NL);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public id(): IdContext {
		let _localctx: IdContext = new IdContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, WickParser.RULE_id);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.match(WickParser.GenericLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public quotelessArgument(): QuotelessArgumentContext {
		let _localctx: QuotelessArgumentContext = new QuotelessArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, WickParser.RULE_quotelessArgument);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(WickParser.GenericLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public str(): StrContext {
		let _localctx: StrContext = new StrContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, WickParser.RULE_str);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this.match(WickParser.StringLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number_int(): Number_intContext {
		let _localctx: Number_intContext = new Number_intContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, WickParser.RULE_number_int);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.match(WickParser.IntegerLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number_double(): Number_doubleContext {
		let _localctx: Number_doubleContext = new Number_doubleContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, WickParser.RULE_number_double);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(WickParser.DoubleLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public bool(): BoolContext {
		let _localctx: BoolContext = new BoolContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, WickParser.RULE_bool);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this.match(WickParser.BooleanLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variable(): VariableContext {
		let _localctx: VariableContext = new VariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, WickParser.RULE_variable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(WickParser.VARIABLE_PREFIX);
			this.state = 128;
			this.id();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let _localctx: ArgumentContext = new ArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, WickParser.RULE_argument);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case WickParser.GenericLiteral:
				{
				this.state = 130;
				this.quotelessArgument();
				}
				break;
			case WickParser.StringLiteral:
				{
				this.state = 131;
				this.str();
				}
				break;
			case WickParser.IntegerLiteral:
				{
				this.state = 132;
				this.number_int();
				}
				break;
			case WickParser.DoubleLiteral:
				{
				this.state = 133;
				this.number_double();
				}
				break;
			case WickParser.BooleanLiteral:
				{
				this.state = 134;
				this.bool();
				}
				break;
			case WickParser.VARIABLE_PREFIX:
				{
				this.state = 135;
				this.variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let _localctx: FieldContext = new FieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, WickParser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.id();
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << WickParser.StringLiteral) | (1 << WickParser.IntegerLiteral) | (1 << WickParser.DoubleLiteral) | (1 << WickParser.BooleanLiteral) | (1 << WickParser.GenericLiteral) | (1 << WickParser.VARIABLE_PREFIX))) !== 0)) {
				{
				{
				this.state = 139;
				this.argument();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scopedBlock(): ScopedBlockContext {
		let _localctx: ScopedBlockContext = new ScopedBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, WickParser.RULE_scopedBlock);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.id();
			this.state = 149;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 146;
					this.argument();
					}
					}
				}
				this.state = 151;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			}
			this.state = 152;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, WickParser.RULE_block);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(WickParser.LBRACE);
			this.state = 158;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.NL) {
				{
				{
				this.state = 155;
				this.match(WickParser.NL);
				}
				}
				this.state = 160;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === WickParser.GenericLiteral) {
				{
				{
				this.state = 161;
				this.statement();
				}
				}
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 167;
			this.match(WickParser.RBRACE);
			this.state = 171;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 17, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 168;
					this.match(WickParser.NL);
					}
					}
				}
				this.state = 173;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 17, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!WickParser.__ATN) {
			WickParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(WickParser._serializedATN));
		}

		return WickParser.__ATN;
	}

}

export class CompilationUnitContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(WickParser.EOF, 0); }
	public schema(): SchemaContext | undefined {
		return this.tryGetRuleContext(0, SchemaContext);
	}
	public statement(): StatementContext[];
	public statement(i: number): StatementContext;
	public statement(i?: number): StatementContext | StatementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(StatementContext);
		} else {
			return this.getRuleContext(i, StatementContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_compilationUnit; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterCompilationUnit) {
			listener.enterCompilationUnit(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitCompilationUnit) {
			listener.exitCompilationUnit(this);
		}
	}
}


export class SchemaContext extends ParserRuleContext {
	public SchemaPrefix(): TerminalNode { return this.getToken(WickParser.SchemaPrefix, 0); }
	public schemaBlock(): SchemaBlockContext {
		return this.getRuleContext(0, SchemaBlockContext);
	}
	public NL(): TerminalNode[];
	public NL(i: number): TerminalNode;
	public NL(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(WickParser.NL);
		} else {
			return this.getToken(WickParser.NL, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_schema; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterSchema) {
			listener.enterSchema(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitSchema) {
			listener.exitSchema(this);
		}
	}
}


export class SchemaBlockContext extends ParserRuleContext {
	public LBRACE(): TerminalNode { return this.getToken(WickParser.LBRACE, 0); }
	public RBRACE(): TerminalNode { return this.getToken(WickParser.RBRACE, 0); }
	public NL(): TerminalNode[];
	public NL(i: number): TerminalNode;
	public NL(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(WickParser.NL);
		} else {
			return this.getToken(WickParser.NL, i);
		}
	}
	public schemaStatement(): SchemaStatementContext[];
	public schemaStatement(i: number): SchemaStatementContext;
	public schemaStatement(i?: number): SchemaStatementContext | SchemaStatementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(SchemaStatementContext);
		} else {
			return this.getRuleContext(i, SchemaStatementContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_schemaBlock; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterSchemaBlock) {
			listener.enterSchemaBlock(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitSchemaBlock) {
			listener.exitSchemaBlock(this);
		}
	}
}


export class SchemaStatementContext extends ParserRuleContext {
	public schemaField(): SchemaFieldContext | undefined {
		return this.tryGetRuleContext(0, SchemaFieldContext);
	}
	public schemaScopedBlock(): SchemaScopedBlockContext | undefined {
		return this.tryGetRuleContext(0, SchemaScopedBlockContext);
	}
	public SEMICOLON(): TerminalNode[];
	public SEMICOLON(i: number): TerminalNode;
	public SEMICOLON(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(WickParser.SEMICOLON);
		} else {
			return this.getToken(WickParser.SEMICOLON, i);
		}
	}
	public NL(): TerminalNode[];
	public NL(i: number): TerminalNode;
	public NL(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(WickParser.NL);
		} else {
			return this.getToken(WickParser.NL, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_schemaStatement; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterSchemaStatement) {
			listener.enterSchemaStatement(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitSchemaStatement) {
			listener.exitSchemaStatement(this);
		}
	}
}


export class SchemaFieldContext extends ParserRuleContext {
	public id(): IdContext {
		return this.getRuleContext(0, IdContext);
	}
	public SchemaTypeToken(): TerminalNode { return this.getToken(WickParser.SchemaTypeToken, 0); }
	public schemaType(): SchemaTypeContext[];
	public schemaType(i: number): SchemaTypeContext;
	public schemaType(i?: number): SchemaTypeContext | SchemaTypeContext[] {
		if (i === undefined) {
			return this.getRuleContexts(SchemaTypeContext);
		} else {
			return this.getRuleContext(i, SchemaTypeContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_schemaField; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterSchemaField) {
			listener.enterSchemaField(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitSchemaField) {
			listener.exitSchemaField(this);
		}
	}
}


export class SchemaScopedBlockContext extends ParserRuleContext {
	public id(): IdContext {
		return this.getRuleContext(0, IdContext);
	}
	public schemaBlock(): SchemaBlockContext {
		return this.getRuleContext(0, SchemaBlockContext);
	}
	public SchemaTypeLiteral(): TerminalNode[];
	public SchemaTypeLiteral(i: number): TerminalNode;
	public SchemaTypeLiteral(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(WickParser.SchemaTypeLiteral);
		} else {
			return this.getToken(WickParser.SchemaTypeLiteral, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_schemaScopedBlock; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterSchemaScopedBlock) {
			listener.enterSchemaScopedBlock(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitSchemaScopedBlock) {
			listener.exitSchemaScopedBlock(this);
		}
	}
}


export class SchemaTypeContext extends ParserRuleContext {
	public SchemaTypeLiteral(): TerminalNode { return this.getToken(WickParser.SchemaTypeLiteral, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return WickParser.RULE_schemaType; }
	// @Override
	public enterRule(listener: WickParserListener): void {
		if (listener.enterSchemaType) {
			listener.enterSchemaType(this);
		}
	}
	// @Override
	public exitRule(listener: WickParserListener): void {
		if (listener.exitSchemaType) {
			listener.exitSchemaType(this);
		}
	}
}

